create middle ware admin

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,7 +1,11 @@
 /* Medium Layout: 1280px. */
 
 @media only screen and (min-width: 992px) and (max-width: 1200px) {}
-
+@media only screen and (min-width: 992px) and (min-width: 768px) {
+    .navbar-nav li {
+        float: right;
+    }
+}
 
 /* Tablet Layout: 768px. */
 
@@ -40,6 +44,7 @@
 @media only screen and (max-width: 767px) {
     body {
         font-size: 13px;
+
     }
     .header-area {
         padding-top: 120px;
